<resources>
    <string name="app_name">Fitxatu</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="Orduak">Orduak</string>
    <string name="zerrenda">Zerrenda</string>
    <string name="hizk">Hizkuntza</string>
    <string name="eu">Euskera</string>
    <string name="es">Espainiera</string>
    <string name="fr">Frantsesa</string>
    <string name="hasi">Hasi</string>
    <string name="eskuz">Eskuz</string>
    <string name="jai_eguna">Jai eguna</string>
    <string name="bukatu">Bukatu</string>
    <string name="data">Data</string>
    <string name="denbora">Denbora</string>
    <string name="jaia">Jaia</string>
    <string name="extrak">Extrak</string>
    <string name="eguna">Eguna</string>
    <string name="sartu">Sartu</string>
    <string name="atera">Atera</string>
    <string name="gorde">Gorde</string>
    <string name="sartze_heldu">Sartze data ez da heldu</string>
    <string name="ateratze_heldu">Ateratze data ez da heldu</string>
    <string name="sartze_berandu">Sartzea ateratzea baino beranduago</string>
    <string name="zuzen_gorde">Orduak zuzen gorde dira</string>
    <string name="bertsioa">"Bertsioa: "</string>
    <string name="deskarga">Deskarga</string>
    <string name="egunak">Egunak</string>
    <string name="hileak">Hileak</string>
    <string name="asteak">Asteak</string>
    <string name="urteak">Urteak</string>
    <string name="guztiak">Guztiak</string>
    <string name="zuzen_jaitsi">Fitxategia Deskarga karpetara jaitsi da</string>
    <string name="oker_jaitsi">Fitxategia ezin izan da deskargatu</string>
    <string name="data_asteak">%1$sko %2$s. astea</string>
    <string name="data_hileak">%1$sko %2$s</string>
    <string name="urtarrila">urtarrila</string>
    <string name="otsaila">otsaila</string>
    <string name="martxoa">martxoa</string>
    <string name="apirila">apirila</string>
    <string name="maiatza">maiatza</string>
    <string name="ekaina">ekaina</string>
    <string name="uztaila">uztaila</string>
    <string name="abuztua">abuztua</string>
    <string name="iraila">iraila</string>
    <string name="urria">urria</string>
    <string name="azaro">azaro</string>
    <string name="abendua">abendua</string>
    <string name="koor">Koordenatuak</string>
    <string name="gpskoka">GPS Kokapena</string>
    <string name="gpskokam">Itxaron GPSaren ikonoa berde jarri arte</string>
    <string name="gpsbaim">GPS Baimenak</string>
    <string name="gpsbaimm">GPSa baliagarria da zure fitxaketarako. Erabili nahi duzu?</string>
    <string name="gpsbaime">GPS-a baliogarria da zure fitxagearen baliogarritasunerako. Zihur ez duzula baimenik ezartzen?</string>
    <string name="noti_izen">Fitxategia deskargatua</string>
    <string name="noti_deskri">Sakatu karpetako artxiboak ikusteko.</string>
    <string name="bada_erre">Ordu honetan bada erregistro bat</string>
    <string name="bai">Bai</string>
    <string name="ez">Ez</string>
    <string name="db_errore">Datu basean errorea</string>
    <string name="datuak">Datuak</string>
    <string name="nan">NAN Zenbakia</string>
    <string name="iabizen">Izen-abizenak</string>
    <string name="jardun">Jardunaldia</string>
    <string name="jaki_extra_izbu">Utzi lan egiteari!</string>
    <string name="jak_extra_urte">Urteko ordu guztiak egin dituzu.</string>
    <string name="jak_extra_aste">Asteko ordu guztiak egin dituzu.</string>
    <string name="jak_extra_egun">Eguneko ordu guztiak egin dituzu.</string>
    <string name="dat_huts_izbu">Datu Hutsak</string>
    <string name="dat_huts_testu">Datu hauek betetzea erabilgarria izan daiteke etorkizun batean. Bete nahi dituzu?</string>
    <string name="dat_zuzen">Datuak zuzen gorde dira</string>
    <string name="garb_err_izbu">Erregistroa garbitu</string>
    <string name="garb_err_testu">Ziur ahal zaude erregistro guztiak ezabatu nahi dituzula?</string>
    <string name="ezb_err_izbu">Erregistroa ezabatu</string>
    <string name="ezb_err_testu">Ziur ahal zaude %1$s-ko erregistroa ezabatu nahi duzula?</string>
    <string name="baim_desk">Excel fitxategia deskargatzeko baimenak beharrezkoak dira</string>
    <string name="baim_izbu">Beharrezko baimenak</string>
    <string name="ezeztatu">Ezeztatu</string>
    <string name="baim_ez_testu">Funtzio hau desgaitua dago baimenak beharrezkoak direlako. Mesedez, joan zaitez Konfigurazio atalera eta baimenak ezarri.</string>
    <string name="konf">Konfigurazioa</string>
    <string name="extr_hasi_urte">Ez ezazu gehiago lan egin</string>
    <string name="extra_hasi_extra">Gogoratu ordu hauek ordu extrak direla</string>
    <string name="extra_hasi_izbu">Jardunaldi maximoa</string>
    <string name="jardun_ehun">Jardunaldia (%)</string>
    <string name="jardun_ehun_testu">Lanaldiaren ehunekoa</string>
    <string name="hitzar">Hitzarmena</string>
    <string name="datu_mezua">Atal honetan lortutako informazio guztia ez zaio inori bidaliko, zure gailuan gordeko da.</string>
    <string name="app_logo">Aplikazioaren logoa</string>
    <string name="sind_logo">Sindikatuko logoa</string>
    <string name="garbi_logo">Erregistroak garbitzeko logoa</string>
    <string name="gps_logo">GPSaren logoa</string>
    <string name="logo_ok">Tick logoa</string>
    <string name="izen_logo">Izenburuaren logoa</string>
    <string name="hitzarmen0">Ostalaritza Bizkaia 2018</string>
</resources>