<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AktTaula"
    android:background="@drawable/atze_logo"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/goibarra"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gorri"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/iragazkia"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_below="@+id/goibarra"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:spinnerMode="dropdown"
        android:fontFamily="@font/fjallaone_family" />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:padding="0dp"
        android:scrollbarStyle="insideOverlay"
        android:layout_below="@+id/iragazkia">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/taulaosoa"
            android:stretchColumns="1">

            <TableRow
                android:id="@+id/izenrow"
                style="@style/TableRowIzenburu"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/izendata"
                    android:padding="3dip"
                    android:text="@string/data"
                    android:paddingStart="7dp"
                    style="@style/TableRowIzenburu"
                    app:fontFamily="@font/fjallaone_family"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/izendenbo"
                    android:gravity="center"
                    android:padding="3dip"
                    android:text="@string/denbora"
                    android:paddingStart="7dp"
                    style="@style/TableRowIzenburu"
                    app:fontFamily="@font/fjallaone_family"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/izenjai"
                    android:gravity="center"
                    android:padding="3dip"
                    android:text="@string/jaia"
                    android:paddingStart="7dp"
                    style="@style/TableRowIzenburu"
                    android:paddingEnd="7dp"
                    app:fontFamily="@font/fjallaone_family"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/extraizen"
                    android:gravity="center"
                    android:padding="3dip"
                    android:paddingStart="7dp"
                    style="@style/TableRowIzenburu"
                    android:paddingEnd="7dp"
                    app:fontFamily="@font/fjallaone_family"
                    android:text="@string/extrak"
                    android:textStyle="bold" />
                <ImageView
                    android:id="@+id/irugarbitu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/garbi_logo"
                    android:gravity="center"
                    style="@style/TableRowIzenburu"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:src="@drawable/garbitu"
                    android:visibility="gone"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>