<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AktDatuak"
    android:background="@drawable/atze_logo"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/goibarra"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gorri"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:id="@+id/izenlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goibarra"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/izenizenlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/izenzenburu"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:text="@string/iabizen"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gorri"
                app:fontFamily="@font/fjallaone_family" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/izenlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/izena"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_ertz"
                android:paddingStart="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:textSize="22dp"
                app:fontFamily="@font/fjallaone_family"
                android:hint="@string/iabizen"
                android:inputType="textCapSentences"
                android:textColorHint="#CFCFCF"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nanlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/izenlayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/nanizenlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nanzenburu"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:text="@string/nan"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gorri"
                app:fontFamily="@font/fjallaone_family" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nanlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nan"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_ertz"
                android:paddingStart="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:hint="@string/nan"
                app:fontFamily="@font/fjallaone_family"
                android:inputType="textCapSentences"
                android:textSize="22dp"
                android:textColorHint="#CFCFCF"
                />
        </LinearLayout>
    </LinearLayout>

   <LinearLayout
        android:id="@+id/jarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nanlayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
       >

        <LinearLayout
            android:id="@+id/jarizenlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/jardizenburu"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:text="@string/jardun_ehun"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gorri"
                app:fontFamily="@font/fjallaone_family" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/jardunaldia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/jardun_ehun"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edit_ertz"
                android:paddingStart="10dp"
                android:hint="@string/jardun_ehun_testu"
                android:inputType="number"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="22dp"
                app:fontFamily="@font/fjallaone_family"
                android:gravity="center_vertical"
                android:textColorHint="#CFCFCF"
                />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/hitzalayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jarlayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/hitzizenlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hitzdizenburu"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:text="@string/hitzar"
                app:fontFamily="@font/fjallaone_family"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gorri" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/hitzarmena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:spinnerMode="dropdown"
            app:fontFamily="@font/fjallaone_family" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/azalpena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hitzalayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        app:fontFamily="@font/fjallaone_family"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/datu_mezua"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botgorde"
        android:layout_below="@+id/azalpena"
        android:layout_width="250dp"
        android:background="@drawable/botoi_borobil"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/gorde"
        app:fontFamily="@font/fjallaone_family"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

</RelativeLayout>